--- a/scss/style.scss
+++ b/scss/style.scss
@@ -746,26 +746,26 @@ header {
         left: 0;
         background-color:rgba(255, 255, 255, 1);
         width: 100vw;
-        min-height: 100vh;
+        max-height: 100vh;
         z-index: +1;
-        display: block;
+        overflow-y: initial;
 
         .w-content {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 700px;
-            overflow-y: initial;
+            max-height: 100vh;
+            overflow-y: auto;
 
             .container {
                 padding: 0;
-                overflow-y: auto;
+                max-height: 100vh;
 
                 .w-title {
                     display: flex;
                     align-items: center;
-                    margin-top: 30px;
+                    margin-top: 60px;
                     margin-bottom: 60px;
                     padding: 0 70px;
                     justify-content: space-between;
@@ -798,7 +798,6 @@ header {
 
                     img {
                         margin-bottom: 30px;
-                        height: 200px;
                     }
                 }
 
